--- a/app/src/main/res/layout/list.xml
+++ b/app/src/main/res/layout/list.xml
@@ -3,10 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_centerVertical="true"
-    android:layout_margin="10dp"
+    android:layout_gravity="center_vertical|center_horizontal"
+    android:layout_margin="40dp"
     android:background="@drawable/shape"
-    android:fontFamily="More Fonts..."
+    android:fontFamily="@font/concert_one"
 
+    android:padding="5dp"
     android:textAlignment="center"
-
     android:textSize="@dimen/menu_item_size" />
