--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -5,41 +5,56 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".MainActivity">
+    tools:context=".MenuActivity">
 
     <RelativeLayout
         android:id="@+id/Relative01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="30dp">
 
         <ImageView
             android:id="@+id/imgTitulo1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@id/titulo"
+            android:layout_alignStart="@id/titulo1"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:contentDescription="@string/todo"
-            android:src="@drawable/game"
+            android:src="@drawable/unouno"
             tools:ignore="MissingConstraints,ImageContrastCheck" />
 
         <TextView
-            android:id="@+id/titulo"
+            android:id="@+id/titulo1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@id/titulo"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:fontFamily="@font/fascinate_inline"
             android:shadowColor="#A59393"
-            android:text="@string/titulo"
-            android:textColor="#373131"
+            android:text="@string/titulo1"
+            android:textColor="#BCE0E1E3"
             android:textSize="@dimen/screen_title_size"
             tools:ignore="RelativeOverlap,SpUsage"
-            android:padding="10dp"
+
             />
+
+        <TextView
+            android:id="@+id/titulo2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/titulo1"
+            android:layout_centerHorizontal="true"
+            android:fontFamily="@font/fascinate_inline"
+            android:shadowColor="#A59393"
+            android:text="@string/titulo2"
+            android:textColor="#9AE0E1E3"
+            android:textSize="@dimen/screen_title_size"
+            tools:ignore="RelativeOverlap,SpUsage" />
 
         <ImageView
             android:id="@+id/imagTitulo2"
@@ -48,7 +63,7 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:contentDescription="@string/todo"
-            android:src="@drawable/game"
+            android:src="@drawable/unouno"
             tools:ignore="ImageContrastCheck" />
     </RelativeLayout>
 
@@ -58,9 +73,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/Relative01"
         android:layout_centerInParent="true"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp" />
-
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/fondoshape"
+        android:dividerHeight="10dp"
+        android:padding="30dp" />
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
